fixed npc bugs, updated pause menu, added npcs to lvl3

--- a/.gitignore
+++ b/.gitignore
@@ -67,3 +67,8 @@ crashlytics-build.properties
 !/.idea/.idea.*/.idea
 /.idea/.idea.*/.idea/*
 !/.idea/.idea.*/.idea/runConfigurations
+
+# Videos
+[Rr]ecordings/
+/[Rr]ecordings/
+
